episode-5/token-exchange/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
    app.kubernetes.io/instance: api
    app.kubernetes.io/name: httpshow
    app.kubernetes.io/version: 0.4.3
  name: api
  namespace: api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: api
    app.kubernetes.io/name: httpshow
    app.kubernetes.io/version: 0.4.3
  type: ClusterIP
