episode-5/token-exchange/api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
  namespace: api
spec:
  hostnames:
    - api-127-0-0-1.nip.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: airlock-gateway
      namespace: airlock-gateway
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: api
          namespace: api
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
